--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
   "cleanUrls": true,
-  "trailingSlash": false
+  "trailingSlash": false,
+  "buildCommand": null,
+  "outputDirectory": ".",
+  "framework": null
 }
